[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Singletons/UIOverlay/PopupPanel.gd" type="Script" id=3]
[ext_resource path="res://Singletons/UIOverlay/UIOverlay.gd" type="Script" id=4]
[ext_resource path="res://Singletons/UIOverlay/ProphecyContents.gd" type="Script" id=5]
[ext_resource path="res://Resources/Custom Resources/Town Related/Prophecies/RookieAngler.tres" type="Resource" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[node name="UIOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
default_prophecy = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="PopupPanel" type="PopupPanel" parent="CanvasLayer"]
visible = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 282.0
margin_bottom = 112.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/PopupPanel"]

[node name="DurationBeforeFade" type="Timer" parent="CanvasLayer/PopupPanel"]
one_shot = true

[node name="ProphecyContents" type="VBoxContainer" parent="CanvasLayer/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer1" type="Control" parent="CanvasLayer/PopupPanel/ProphecyContents"]
margin_right = 274.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="Name" type="Label" parent="CanvasLayer/PopupPanel/ProphecyContents"]
margin_top = 14.0
margin_right = 274.0
margin_bottom = 69.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Prophecy overlay!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Requirements" type="Label" parent="CanvasLayer/PopupPanel/ProphecyContents"]
margin_top = 73.0
margin_right = 274.0
margin_bottom = 104.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Prophecy requirements asdasdasdasdasdasdasd"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tween_all_completed" from="CanvasLayer/PopupPanel/Tween" to="CanvasLayer/PopupPanel" method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="CanvasLayer/PopupPanel/DurationBeforeFade" to="CanvasLayer/PopupPanel" method="_on_DurationBeforeFade_timeout"]
